block A1 and Pre processing of datasets and clean and optimized it.

--- a/notebooks/analysis_v2.ipynb
+++ b/notebooks/analysis_v2.ipynb
@@ -115,6 +115,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff3c24d4",
+   "metadata": {},
+   "source": [
+    "هدف این بلوک این است که بفهمیم ساختار فایل‌های .abs چگونه است، تعداد فایل‌ها در هر پوشه چقدر است، و یک تابع استخراجِ نویسندهٔ مقاوم/قوی بنویسیم که روی دادهٔ واقعی کار کند — بعد از اجرای این بلوک به‌راحتی می‌توانیم بقیهٔ پردازش (ساخت گراف زمانی) را ایمن اجرا کنیم."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e9a1665e",
@@ -295,12 +303,199 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3461920d",
+   "metadata": {},
+   "source": [
+    "# ساخت IDها و فایل‌های یال (per-year CSV) — حافظه‌پسند"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffa64332",
+   "metadata": {},
+   "source": [
+    "هدف این گام:\n",
+    "\n",
+    "به هر نویسنده یک شناسه‌ی عددی (int ID) نسبت دهیم (map: author -> id) تا پردازش‌های بعدی سریع و حافظه‌پسند شوند.\n",
+    "\n",
+    "برای هر سال یک فایل CSV بسازیم که هر سطرش یک یالِ بدون‌جهت (undirected) را به‌صورت src_id,dst_id,year ذخیره کند.\n",
+    "\n",
+    "یال‌ها در هر سال بدون تکرار (deduped) باشند و جفت‌ها به‌صورت مرتب شده (min_id,max_id) ذخیره شوند تا تکرار‌های (u,v) و (v,u) یکسان شناخته شوند.\n",
+    "\n",
+    "یک فایل nodes.csv بسازیم که id → author_name نگه دارد (برای مرجع و مصورسازی بعدی)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b44d49cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Years found: ['1992', '1993', '1994', '1995', '1996', '1997', '1998', '1999', '2000', '2001', '2002', '2003']\n",
+      "Year 1992: processed 1367 files -> 1911 unique edges  (time: 2.02s)\n",
+      "Year 1993: processed 2058 files -> 2673 unique edges  (time: 2.19s)\n",
+      "Year 1994: processed 2377 files -> 3131 unique edges  (time: 1.44s)\n",
+      "Year 1995: processed 2303 files -> 3588 unique edges  (time: 1.83s)\n",
+      "Year 1996: processed 2606 files -> 4876 unique edges  (time: 1.53s)\n",
+      "Year 1997: processed 2673 files -> 3823 unique edges  (time: 1.51s)\n",
+      "Year 1998: processed 2758 files -> 4340 unique edges  (time: 1.64s)\n",
+      "Year 1999: processed 2803 files -> 4595 unique edges  (time: 1.52s)\n",
+      "Year 2000: processed 3126 files -> 4755 unique edges  (time: 1.45s)\n",
+      "Year 2001: processed 3153 files -> 5064 unique edges  (time: 1.77s)\n",
+      "Year 2002: processed 3312 files -> 6656 unique edges  (time: 1.70s)\n",
+      "Year 2003: processed 1019 files -> 2240 unique edges  (time: 0.50s)\n",
+      "\n",
+      "Done. Total authors (unique): 16715\n",
+      "Per-year edge counts: {'1992': 1911, '1993': 2673, '1994': 3131, '1995': 3588, '1996': 4876, '1997': 3823, '1998': 4340, '1999': 4595, '2000': 4755, '2001': 5064, '2002': 6656, '2003': 2240}\n",
+      "Nodes file saved to: ../data/edges_by_year\\nodes.csv\n",
+      "Per-year CSVs saved to: ../data/edges_by_year\n",
+      "Elapsed time: 19.15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A-1: Build temporal edge lists (author -> id map + per-year deduped CSVs)\n",
+    "import os, re, time, csv\n",
+    "from itertools import combinations\n",
+    "from collections import defaultdict, OrderedDict\n",
+    "\n",
+    "# مسیر ورودی (پوشه cit-HepTh-abstracts) — اگر مسیرت فرق داره اینجا را تغییر بده\n",
+    "DATA_ROOT = \"../data/cit-HepTh-abstracts\"\n",
+    "OUT_DIR = \"../data/edges_by_year\"   # خروجی: فایل‌های CSV برای هر سال و nodes.csv\n",
+    "\n",
+    "os.makedirs(OUT_DIR, exist_ok=True)\n",
+    "\n",
+    "# تابع استخراج نویسنده را از A-0 بیاور (یا از src/data_parser.py)\n",
+    "# اگر در نوت بوک قبلی تعریف شده می‌توان مستقیماً استفاده کرد؛ در غیر این صورت این پیاده‌سازی را کپی کن:\n",
+    "def extract_authors_from_text(txt):\n",
+    "    t = txt.replace('\\\\\\n', '\\n').replace('\\\\', '\\n')\n",
+    "    # الگوهای ساده\n",
+    "    m = re.search(r'Authors:\\s*(.*?)\\n(?:Title:|Comments:|\\\\\\n|$)', t, re.DOTALL | re.IGNORECASE)\n",
+    "    authors_text = None\n",
+    "    if m:\n",
+    "        authors_text = m.group(1)\n",
+    "    else:\n",
+    "        # fallback خطی\n",
+    "        for line in t.splitlines():\n",
+    "            if line.strip().lower().startswith(\"authors:\"):\n",
+    "                authors_text = line.split(':',1)[1]\n",
+    "                break\n",
+    "    if not authors_text:\n",
+    "        return []\n",
+    "    authors_text = authors_text.replace('\\n', ' ')\n",
+    "    authors_text = re.sub(r'\\sand\\s', ',', authors_text)\n",
+    "    parts = re.split(r',|;|\\band\\b', authors_text)\n",
+    "    authors = []\n",
+    "    for p in parts:\n",
+    "        p = p.strip()\n",
+    "        if not p:\n",
+    "            continue\n",
+    "        p = re.sub(r'\\(.*?\\)', '', p).strip()\n",
+    "        p = re.sub(r'\\s+', ' ', p)\n",
+    "        authors.append(p)\n",
+    "    seen = set(); out=[]\n",
+    "    for a in authors:\n",
+    "        k = a.lower()\n",
+    "        if k not in seen:\n",
+    "            seen.add(k); out.append(a)\n",
+    "    return out\n",
+    "\n",
+    "# 1) scan years (sorted)\n",
+    "years = sorted([d for d in os.listdir(DATA_ROOT) if os.path.isdir(os.path.join(DATA_ROOT, d))])\n",
+    "print(\"Years found:\", years)\n",
+    "\n",
+    "# global author -> id mapping (OrderedDict to keep insertion order stable)\n",
+    "author2id = OrderedDict()\n",
+    "next_id = 0\n",
+    "\n",
+    "# We'll store for each year a set of edges (tuple (u_id, v_id) with u<v)\n",
+    "# For memory-safety: we'll use a set per year (dataset small enough). If memory problem داشتیم،\n",
+    "# می‌توانستیم flush به فایل موقت و merge پس از آن انجام دهیم.\n",
+    "year_edge_counts = {}\n",
+    "start = time.time()\n",
+    "\n",
+    "for y in years:\n",
+    "    year_dir = os.path.join(DATA_ROOT, y)\n",
+    "    edge_set = set()\n",
+    "    files = [f for f in os.listdir(year_dir) if f.endswith('.abs')]\n",
+    "    # progress print\n",
+    "    t0 = time.time()\n",
+    "    for i,fn in enumerate(files):\n",
+    "        fpath = os.path.join(year_dir, fn)\n",
+    "        with open(fpath, 'r', encoding='utf-8', errors='ignore') as fh:\n",
+    "            txt = fh.read()\n",
+    "        authors = extract_authors_from_text(txt)\n",
+    "        if len(authors) < 2:\n",
+    "            continue\n",
+    "        # assign ids\n",
+    "        ids = []\n",
+    "        for a in authors:\n",
+    "            key = a.strip()\n",
+    "            if key not in author2id:\n",
+    "                author2id[key] = next_id\n",
+    "                ids.append(next_id)\n",
+    "                next_id += 1\n",
+    "            else:\n",
+    "                ids.append(author2id[key])\n",
+    "        # all pairs (undirected clique)\n",
+    "        for u,v in combinations(ids, 2):\n",
+    "            if u == v:\n",
+    "                continue\n",
+    "            a,b = (u,v) if u < v else (v,u)\n",
+    "            edge_set.add((a,b))\n",
+    "    # write deduped per-year csv\n",
+    "    out_csv = os.path.join(OUT_DIR, f\"edges_{y}.csv\")\n",
+    "    with open(out_csv, 'w', newline='', encoding='utf-8') as csvf:\n",
+    "        writer = csv.writer(csvf)\n",
+    "        # header optional\n",
+    "        writer.writerow([\"src\",\"dst\",\"year\"])\n",
+    "        for (u,v) in sorted(edge_set):\n",
+    "            writer.writerow([u,v,y])\n",
+    "    year_edge_counts[y] = len(edge_set)\n",
+    "    print(f\"Year {y}: processed {len(files)} files -> {year_edge_counts[y]} unique edges  (time: {time.time()-t0:.2f}s)\")\n",
+    "\n",
+    "# write nodes file\n",
+    "nodes_file = os.path.join(OUT_DIR, \"nodes.csv\")\n",
+    "with open(nodes_file, 'w', newline='', encoding='utf-8') as nf:\n",
+    "    w = csv.writer(nf)\n",
+    "    w.writerow([\"id\",\"author\"])\n",
+    "    for author,aid in author2id.items():\n",
+    "        w.writerow([aid, author])\n",
+    "\n",
+    "total_time = time.time() - start\n",
+    "print(\"\\nDone. Total authors (unique):\", len(author2id))\n",
+    "print(\"Per-year edge counts:\", year_edge_counts)\n",
+    "print(\"Nodes file saved to:\", nodes_file)\n",
+    "print(\"Per-year CSVs saved to:\", OUT_DIR)\n",
+    "print(f\"Elapsed time: {total_time:.2f}s\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c53eee",
+   "metadata": {},
+   "source": [
+    "الان ما یک نسخه تمیز و بهینه از یال‌های زمانی داریم که:\n",
+    "\n",
+    "۱۶٬۷۱۵ نویسنده یکتا (id → name)\n",
+    "\n",
+    "یال‌های منحصر به فرد برای هر سال بدون تکرار\n",
+    "\n",
+    "همه‌چیز آماده برای ساخت snapshot‌ های گراف و تحلیل شاخص‌هاست\n",
+    "\n",
+    "حالا می‌توانیم وارد A-2 شویم:\n",
+    "\n",
+    "ساخت گراف برای هر سال از روی CSVها\n",
+    "\n",
+    "محاسبه شاخص‌های پایه برای هر snapshot (Average Degree, Density, Clustering Coefficient، اندازه مولفه بزرگ، Approx Diameter، Approx Betweenness، PageRank و غیره)\n",
+    "\n",
+    "ذخیره نتایج در یک جدول (DataFrame) برای استفاده در تحلیل رشد و ترسیم نمودارها"
+   ]
   }
  ],
  "metadata": {
