Block A2: CSV file of years and create Graph with NetworkX and Calculate Basics + Saving all results in a Data Frame in a CSV.

--- a/notebooks/analysis_v2.ipynb
+++ b/notebooks/analysis_v2.ipynb
@@ -496,6 +496,180 @@
     "\n",
     "ذخیره نتایج در یک جدول (DataFrame) برای استفاده در تحلیل رشد و ترسیم نمودارها"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab8ddf82",
+   "metadata": {},
+   "source": [
+    "# محاسبات پایه"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19cbed64",
+   "metadata": {},
+   "source": [
+    "خواندن CSV همان سال و ساخت گراف با NetworkX\n",
+    "\n",
+    "محاسبه شاخص‌ها:\n",
+    "\n",
+    "avg_degree → میانگین درجه\n",
+    "\n",
+    "density → چگالی گراف\n",
+    "\n",
+    "num_nodes, num_edges → تعداد گره و یال\n",
+    "\n",
+    "largest_cc_size → اندازه بزرگ‌ترین مؤلفه همبند\n",
+    "\n",
+    "avg_clustering → ضریب خوشه‌بندی میانگین\n",
+    "\n",
+    "approx_diameter → قطر تقریبی با BFS sampling\n",
+    "\n",
+    "betweenness_approx → بینابینی تقریبی با k گره نمونه\n",
+    "\n",
+    "pagerank → پیج‌رنک با پیاده‌سازی Sparse Power Iteration که نوشتیم\n",
+    "\n",
+    "ذخیره همه در یک DataFrame و سیو به CSV برای تحلیل بعدی."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d732ea36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done in 0.04922032356262207 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os, random, time\n",
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "import scipy.sparse as sp\n",
+    "\n",
+    "# مسیر پوشه CSV های per-year\n",
+    "edges_dir = \"../data/edges_by_year\"\n",
+    "\n",
+    "years = sorted([y for y in os.listdir(edges_dir) if y.endswith(\".csv\") == False and y.isdigit()])\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "def approx_diam(G, k=30):\n",
+    "    nodes = list(G.nodes())\n",
+    "    max_e = 0\n",
+    "    for _ in range(k):\n",
+    "        s = random.choice(nodes)\n",
+    "        lengths = nx.single_source_shortest_path_length(G, s)\n",
+    "        e = max(lengths.values())\n",
+    "        if e > max_e:\n",
+    "            max_e = e\n",
+    "    return max_e\n",
+    "\n",
+    "def pagerank_power_sparse(G, alpha=0.85, max_iter=100, tol=1e-6):\n",
+    "    nodes = list(G.nodes())\n",
+    "    n = len(nodes)\n",
+    "    idx = {n: i for i, n in enumerate(nodes)}\n",
+    "    rows, cols = [], []\n",
+    "    for u,v in G.edges():\n",
+    "        rows.append(idx[v])\n",
+    "        cols.append(idx[u])\n",
+    "    data = np.ones(len(rows))\n",
+    "    M = sp.csr_matrix((data, (rows, cols)), shape=(n, n), dtype=float)\n",
+    "    col_sums = np.array(M.sum(axis=0)).flatten()\n",
+    "    inv_col_sums = np.zeros_like(col_sums)\n",
+    "    col_nz = col_sums != 0\n",
+    "    inv_col_sums[col_nz] = 1.0 / col_sums[col_nz]\n",
+    "    D = sp.diags(inv_col_sums)\n",
+    "    M = M.dot(D)\n",
+    "    x = np.ones(n) / n\n",
+    "    teleport = (1.0 - alpha) / n\n",
+    "    for _ in range(max_iter):\n",
+    "        x_last = x.copy()\n",
+    "        x = alpha * (M.dot(x)) + teleport\n",
+    "        if np.linalg.norm(x - x_last, 1) < tol:\n",
+    "            break\n",
+    "    return dict(zip(nodes, x))\n",
+    "\n",
+    "t0 = time.time()\n",
+    "for year in years:\n",
+    "    edge_file = os.path.join(edges_dir, year, \"edges.csv\")\n",
+    "    df_edges = pd.read_csv(edge_file)\n",
+    "    G = nx.from_pandas_edgelist(df_edges, 'src', 'dst')\n",
+    "\n",
+    "    num_nodes = G.number_of_nodes()\n",
+    "    num_edges = G.number_of_edges()\n",
+    "    avg_deg = sum(dict(G.degree()).values()) / num_nodes\n",
+    "    dens = nx.density(G)\n",
+    "    largest_cc = max(nx.connected_components(G), key=len)\n",
+    "    G_main = G.subgraph(largest_cc).copy()\n",
+    "    largest_cc_size = G_main.number_of_nodes()\n",
+    "    avg_clust = nx.average_clustering(G)\n",
+    "    diam = approx_diam(G_main, k=20)\n",
+    "    betw_approx = nx.betweenness_centrality(G_main, k=50, seed=42)\n",
+    "    pr = pagerank_power_sparse(G)\n",
+    "\n",
+    "    results.append({\n",
+    "        \"year\": year,\n",
+    "        \"nodes\": num_nodes,\n",
+    "        \"edges\": num_edges,\n",
+    "        \"avg_degree\": avg_deg,\n",
+    "        \"density\": dens,\n",
+    "        \"largest_cc_size\": largest_cc_size,\n",
+    "        \"avg_clustering\": avg_clust,\n",
+    "        \"approx_diameter\": diam,\n",
+    "        \"top5_pagerank\": sorted(pr.items(), key=lambda x: x[1], reverse=True)[:5]\n",
+    "    })\n",
+    "\n",
+    "df_results = pd.DataFrame(results)\n",
+    "df_results.to_csv(\"../data/basic_metrics_per_year.csv\", index=False)\n",
+    "print(\"Done in\", time.time()-t0, \"seconds\")\n",
+    "df_results\n"
+   ]
   }
  ],
  "metadata": {
