Block A2: CSV file of years and create Graph with NetworkX and Calculate Basics + Saving all results in a Data Frame in a CSV. (version 2 - better than) + report it

--- a/notebooks/analysis_v2.ipynb
+++ b/notebooks/analysis_v2.ipynb
@@ -757,6 +757,70 @@
     "print(\"- SI model simulation\")\n",
     "print(\"- Advanced centrality analysis\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2f600b0",
+   "metadata": {},
+   "source": [
+    "📊 خروجی ها :\n",
+    "\n",
+    "\n",
+    "فایل معیارهای زمانی  با ستون‌های: (temporal_metrics.csv)\n",
+    "\n",
+    "* سال\n",
+    "* تعداد نودها (سالانه و تجمعی)\n",
+    "* تعداد یال‌ها (سالانه و تجمعی)\n",
+    "* میانگین درجه\n",
+    "* تراکم شبکه\n",
+    "* تعداد مولفه‌های همبندی\n",
+    "* اندازه بزرگترین مولفه همبند\n",
+    "* ضریب خوشه‌بندی متوسط\n",
+    "* میانگین طول مسیر\n",
+    "* قطر شبکه\n",
+    "\n",
+    "\n",
+    "Summary of computed metrics:\n",
+    "   year  nodes_snapshot  edges_snapshot  avg_degree_snapshot  density_snapshot\n",
+    "0  1992            1451            1911             2.634045          0.001817\n",
+    "1  1993            1944            2673             2.750000          0.001415\n",
+    "2  1994            2351            3131             2.663547          0.001133\n",
+    "3  1995            2417            3588             2.968970          0.001229\n",
+    "4  1996            3033            4876             3.215298          0.001060\n",
+    "\n",
+    "نمودارهای تحلیل رشد:\n",
+    "\n",
+    "* قانون تراکم‌سازی (Densification Law)\n",
+    "\n",
+    "* روند تغییر قطر شبکه (Shrinking Diameter)\n",
+    "\n",
+    "\n",
+    "\n",
+    "⚙️ ملاحظات فنی که انجام شده و در گزارش به میان آورده می شود، عبارتست از:\n",
+    "* پردازش گراف:\n",
+    "\n",
+    "برای گراف‌های سالانه از networkx استفاده می‌شود\n",
+    "\n",
+    "محاسبات سنگین مانند قطر شبکه فقط روی بزرگترین مولفه همبند انجام می‌شود\n",
+    "\n",
+    "* بهینه‌سازی ( از چت بات ها بسیار کمک گرفته شده است):\n",
+    "\n",
+    "استفاده از  برای نمایش پیشرفت پردازش\n",
+    "`tqdm`\n",
+    "ذخیره موقت داده‌ها برای جلوگیری از محاسبات مجدد\n",
+    "\n",
+    "* تحلیل رشد:\n",
+    "\n",
+    "تراکم‌سازی: `$E(t) \\propto N(t)^a$ با $a≈\\text{slope}$`\n",
+    "\n",
+    "* قطر موثر: بررسی روند کاهشی قطر شبکه در طول زمان"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8d89598",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
