Block A4: SI Model Simulation + report with plot + REPORTS. Final

--- a/notebooks/analysis_v2.ipynb
+++ b/notebooks/analysis_v2.ipynb
@@ -1133,6 +1133,92 @@
     "plt.savefig(sensitivity_plot, dpi=300)\n",
     "print(f\"✅ Sensitivity analysis plot saved to: {sensitivity_plot}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62549caa",
+   "metadata": {},
+   "source": [
+    "### نتایج تشخیص جوامع:\n",
+    "\n",
+    "فایل community_metrics.csv با معیارهای:\n",
+    "\n",
+    "* Modularity\n",
+    "\n",
+    "* تعداد جوامع\n",
+    "\n",
+    "* اندازه بزرگترین جامعه\n",
+    "\n",
+    "* میانگین اندازه جوامع\n",
+    "\n",
+    "فایل GEXF برای مصورسازی جوامع (سال 2000)\n",
+    "\n",
+    "### شبیه‌سازی SI:\n",
+    "\n",
+    "* نمودار انتشار اطلاعات در زیرگراف\n",
+    "\n",
+    "* تحلیل حساسیت به پارامتر احتمال انتشار (p)\n",
+    "\n",
+    "### نمودارهای جدید:\n",
+    "\n",
+    "* تکامل ماژولاریتی در طول زمان\n",
+    "\n",
+    "* نتایج شبیه‌سازی مدل SI\n",
+    "\n",
+    "## ⏳ نکات اجرایی:\n",
+    "* تشخیص جوامع ممکن است برای گراف‌های بزرگتر زمان‌بر باشد (الگوریتم Louvain)\n",
+    "\n",
+    "* شبیه‌سازی  روی زیرگراف 1000 گره‌ای اجرا می‌شود تا کارایی بهتری داشته باشد\n",
+    "\n",
+    "`فایل GEXF خروجی را می‌توان در نرم‌افزار Gephi برای مصورسازی حرفه‌ای جوامع استفاده کرد`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37a02de",
+   "metadata": {},
+   "source": [
+    "# گزارش نهایی پروژه\n",
+    "## 1. اهداف اصلی پروژه\n",
+    "* تحلیل ساختاری و زمانی شبکه همکاری علمی CA-HepTh\n",
+    "\n",
+    "* بررسی قوانین رشد شبکه (تراکم‌سازی و کاهش قطر)\n",
+    "\n",
+    "* تشخیص ساختار جوامع علمی\n",
+    "\n",
+    "* شبیه‌سازی انتشار اطلاعات\n",
+    "\n",
+    "## 2. یافته‌های کلیدی\n",
+    "###  بخش تحلیل و یافته‌های اصلی\n",
+    "* رشد شبکه\t\n",
+    "- توان تراکم‌سازی: α = 1.236 (ابرخطی)\n",
+    "- کاهش قطر شبکه از ۱۴ به ۸ در طول ۱۲ سال\n",
+    "* ساختار جوامع\t\n",
+    "- افزایش مدولاریتی از 0.55 به 0.72\n",
+    "- تشکیل جوامع تخصصی پایدارتر در طول زمان\n",
+    "* انتشار اطلاعات\t\n",
+    "- انتشار سریع‌تر با افزایش احتمال انتقال (p)\n",
+    "- زمان اشباع شبکه: ۸ گام زمانی برای p=0.5\n",
+    "## 3. خروجی‌های تولید شده:\n",
+    "خروجی ها همگی در این فایل ژوپیتر نوت بوک موجود است و پیوست گزارش نیز در کل قابل رویت و تحلیل است.\n",
+    "\n",
+    "`در نهایت باید از استاد بزرگوار جناب دکتر خدنگی و حل تمرین ایشان جهت تمدید فرصت تحقیق تشکر و قدر دانی انجام بده. من الله توفیق ....`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "504b0422",
+   "metadata": {},
+   "source": [
+    "# نتیجه‌گیری\n",
+    "1. شبکه CA-HepTh با نرخ α≈1.236 در حال تراکم‌سازی است\n",
+    "\n",
+    "2. قطر شبکه با رشد شبکه کاهش می‌یابد\n",
+    "\n",
+    "3. ساختار جوامع علمی با گذشت زمان پایدارتر می‌شود\n",
+    "\n",
+    "4. انتشار اطلاعات در شبکه به شدت به احتمال انتقال وابسته است"
+   ]
   }
  ],
  "metadata": {
